Fix every content tabs overflow

--- a/admin-dev/themes/new-theme/scss/pages/orders/_orders_view.scss
+++ b/admin-dev/themes/new-theme/scss/pages/orders/_orders_view.scss
@@ -351,7 +351,7 @@
   #order-view-page {
     padding: 0 10px;
 
-    #historyTabContent,
+    .right-column .tab-content,
     #orderProductsPanel {
       table {
         overflow: scroll;
